# gitlab-s3-releaser

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: artifact.rs  gitlabreleases.rs  lib.rs  main.rs  releaser.rs  s3indexer.rs
