[package]
name = "gitlab_s3_releaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "~1"
aws-sdk-s3 = "~1"
clap = { version = "~4", features = ["derive"] }
gitlab = "0.1609.1"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
anyhow = "1.0.80"
log = "0.4.21"
