[package]
name = "gitlab_s3_releaser"
version = "0.1.0"
edition = "2021"
authors = ["theirix <theirix@gmail.com>"]
repository = "https://github.com/theirix/gitlab-s3-releaser"
license = "MIT"
readme = "README.md"
description = " Tool to create GitLab releases from S3 bucket"
categories = ["command-line-utilities"]
keywords = ["gitlab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "~1"
aws-sdk-s3 = "~1"
clap = { version = "~4", features = ["derive"] }
gitlab = "0.1609.0"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
anyhow = "~1"
log = "0.4.21"
regex = "~1"
serde = { version = "1.0.197", features = ["derive"] }
